# rs-hx-portfolio

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  favicon.avif
migrations/2024-02-15-111617_posts/: down.sql  up.sql
src/: main.rs  schema.rs
src/models/: mod.rs
static/: admin.css  main.css
templates/: admin.html.hbs  create_ok.html.hbs  index.html.hbs  part_create.html.hbs  part_posts.html.hbs
