[package]
name = "repeat-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version="0.5.0-rc.4", features=["json"]}
diesel = {version="2.1.4", features=["postgres", "r2d2"]}
dotenvy = "0.15.7"
serde = "1.0.19"

rocket_dyn_templates = {version="0.1.0", features=["handlebars"]}

rocket_contrib = {version="0.4.4", features=["json"]}
